# TP-CG

./: .gitignore  CMakeLists.txt  README.md  generator  plane.3d
.cache/clangd/index/: box.cpp.21114A3194E36704.idx  cone.cpp.657CC70749106F53.idx  engine_main.cpp.F53ADCB1D0966531.idx  generator_main.cpp.B55A556F7C9DB114.idx  generators.hpp.D8EF3907289C86F9.idx  parser.cpp.B2530B570C7AC1AF.idx  parser.hpp.864A34441D580A8F.idx  plane.cpp.1790F56F6E6ED184.idx  point.cpp.BCA08807EE379C23.idx  point.hpp.8E3EDE8B1CECA459.idx  sphere.cpp.DEEBACDF236CC413.idx  tinyxml2.cpp.98060C60B0CBB785.idx  tinyxml2.h.7F2A48D77F3BD8D1.idx
Material_Fornecido/: xml_syntax.xml
include/: box.hpp  cgmath.hpp  generators.hpp  groups.hpp  model.hpp  parsedModel.hpp  parser.hpp  point.hpp  transform.hpp
include/engine/: color.hpp
include/engine/frustum/: AABox.hpp  frustumG.hpp  plane.hpp
include/engine/imgui/: imgui.h  imgui_impl_glut.h  imgui_impl_opengl3.h  imgui_internal.h
include/engine/lights/: light.hpp  lightDir.hpp  lightPoint.hpp  lightSpot.hpp
include/engine/transform/: catmullrom.hpp  rotate.hpp  scale.hpp  transform.hpp  translate.hpp
models/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  cylinder.3d  cylinder_1_2_10.3d  plane_2_3.3d  sphere.3d  sphere_1_10_10.3d  sphere_1_15_15.3d  sphere_1_20_20.3d  sphere_1_8_8.3d  teacup_10.3d  teaspoon.patch  teaspoon_10.3d  test_3_1.xml  test_cylinder.xml  test_sphere.xml
patches/: teacup.patch
scenes/: box_2_3.3d  cylinder.xml  plane_cone.xml  solar_system.xml  solar_system_2.xml  solar_system_3.xml  solar_system_frustum.xml  test_1_1.xml  test_1_2.xml  test_1_3.xml  test_1_4.xml  test_1_5.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_3_2.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
src/engine/: color.cpp  engine_main.cpp  groups.cpp  model.cpp  parser.cpp  transform.cpp
src/engine/frustum/: AABox.cpp  frustumG.cpp  plane.cpp
src/engine/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/engine/lights/: lightDir.cpp  lightPoint.cpp  lightSpot.cpp
src/engine/transform/: catmullrom.cpp  rotate.cpp  scale.cpp  translate.cpp
src/generator/: box.cpp  cone.cpp  cylinder.cpp  generator_main.cpp  patch.cpp  plane.cpp  sphere.cpp  teste.cpp
src/shared/: cgmath.cpp  parsedModel.cpp  point.cpp
